test/typechecker.d/invalid/ass2.souc.bad
n = 5

; silly, but the types are ok.

f(x: Integer): Integer = do
	b: Bool <- 'c'
	if b
		return x
	else
		return n
